# rust-service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
.sqlx/: query-0b72902bc8ec599bc847b3671444f3f19f59bdcc47e22697d73196df434c9aca.json  query-0f0a33dc2eaf1ef656ed609789b388125b4b820db084d242dfd1ee3380eb2602.json  query-114ff3cf15e3f32c93e7e955a95eee7253efd530ec796a6381b4253ffc06c95f.json  query-1b83c8cd067344cb58eba03072882b57320310139b0bbcfe41f47ca94ff68140.json  query-1e9b7f86a5e4fa2a155383c227ee21e9d33e7af7cfe5f8aca02f7876ca571732.json  query-1fcb0ce06e3f0890155c5830f679d357ea563693d56f7e0774ab061660d2da87.json  query-248aa7ea60d360a1f887f956aa4a9091270ebf1e8848239ef22bd2fea099cc99.json  query-40722320c24c1baae823dcc5701803d49111be6d454e88594b60d9f0542f03ec.json  query-40a18932657f13ae89215d6af2800ee899fc82406732ce44c31102d01abd2829.json  query-424ada878172b2ea54c4869bbc5af3eaf5aa22e0639aeef4c9d94f981d85844c.json  query-436373e649028b70479d5060767be60492962a60bf51f3d37f0debad8d9ad17d.json  query-438a67e55145f591166da1e6a442d1abcee5dccc18013b6efda800f1661c61c5.json  query-4cff51fad5c2a0eba967b869f09b6068500c7f3cce38ef3bd704a7040ad1f5f6.json  query-5390f282e02484e43e80f51b36b54d9a8e4b5ed7d507c8c30677c1f2bc525983.json  query-543cae6001cd02cd5626e9698649049451349a582c2339e5d3017bafff8b7f72.json  query-58cf93a659230a5f721fb309d4bdd34c6e4e0e6d150bef0c6ccbb20018d3a118.json  query-5e9286528602ec4070ce109d97120fb715bc78aa34022b6214a4a87ab6e8be8a.json  query-5f543eb36f38ec368d03faf6a0a749de1d02e4498fcf4a8b762745e2f9f2070e.json  query-65d46ca1eddc26a915213f723cb3a5486643a07a731615b8b35e7c6fa8e08bc1.json  query-6f206270c4ffff9a9226c94e9976e004c289fb49b1814774185d89f3ef838f8b.json  query-73214d45f49b17de59bc416ccd25a4f38f0d49012c5f13329b5b3723ad64b815.json  query-7f85a537bfd65bc4364aeed9c1e9ff6ce75e4ddb147507c6b41727211ba050b0.json  query-88808ec7e8d2688f99fa334283111108ecf56fd2524c76d2090493d998eb370f.json  query-8a836da41dfc2d6e288fd80ec0313d013c886eba7098fdaab5b01f330c13626d.json  query-8e606e7d0eea7225358751a50200ca8a2ee1d1251798577c6fb3fabe07262610.json  query-8f7a6f1d6337e63e4bfb5a403c962b47f50996d127a0a6dd5ba1bd5b37ce286a.json  query-964a7e6d1873493277f42c5faf6aedf74ea8f7f5983dafb58cc6a00d3c9be193.json  query-d171044e61381829102ef36798381842552e465c058e22f04bebb898c2dcdcdd.json  query-d3f6531db1a922774a1aef1695690552454feff58979b4b9a46c991df38753a8.json  query-e0df65cf374bb7c1f9ff4ced44d212a795590f71af90e5fcdbe1cd896fc53d00.json  query-e35eca146d1af05bee6a95433aec294a489a885c8efad9ad413107b977bd722c.json  query-e5816d64c38f5d28cebb2bd025c33d9d42abb1a246544ec354974a7f7c7d241b.json  query-f973d52d03b869dc79620b6d4f499dedf07d356d5e469761d3d1cf5d524ac60d.json  query-fb0ba9e20096b87a953c982dc632604731f99bf593e3b312b0aafb252aeff9a9.json  query-fcaac9ee75b7efa03bc795d75f879547e03b485a37d4b994aed89c63ad97bba7.json
chat-service/: Cargo.toml
chat-service/src/: api_response.rs  lib.rs  main.rs  state.rs
chat-service/src/api/: mod.rs
chat-service/src/api/images/: router.rs  schemas.rs
kafka/: Cargo.toml
kafka-client/: Cargo.toml
kafka-client/src/: config.rs  consumer.rs  error.rs  lib.rs  producer.rs  schemas.rs
kafka-client/tests/: config.rs  producer_consumer.rs  schemas.rs
kafka/src/: config.rs  consumer.rs  error.rs  producer.rs  schemas.rs
kafka/tests/: config.rs  producer_consumer.rs  schemas.rs
s3/: Cargo.toml
s3-client/: Cargo.toml
s3-client/src/: error.rs  lib.rs
s3-client/tests/: s3_integration.rs
s3/src/: error.rs  lib.rs
scylladb/: Cargo.toml
scylladb-client/: Cargo.toml
scylladb-client/src/: error.rs  lib.rs
scylladb/src/: lib.rs
seed-data/: Cargo.toml
seed-data/src/: main.rs
service/: Cargo.toml
service-auth/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
service-auth/migrations/: 001_init.sql
service-auth/proto/: auth.proto
service-auth/src/: config.rs  error.rs  lib.rs  main.rs  oauth.rs  service.rs  state.rs  store.rs  token.rs
service-calls/: .env.example  Cargo.toml  Dockerfile  README.md
service-calls/src/: config.rs  lib.rs  main.rs  room.rs  routes.rs  signal.rs  state.rs  ws.rs
service-channels/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
service-channels/migrations/: 001_init.sql
service-channels/src/: config.rs  error.rs  events.rs  lib.rs  main.rs  models.rs  routes.rs  schemas.rs  search.rs  state.rs  store.rs
service-chats/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
service-chats/src/: config.rs  error.rs  events.rs  lib.rs  main.rs  state.rs
service-chats/src/api/: mod.rs  router.rs  schemas.rs
service-gateway/: .env.example  Cargo.toml  Dockerfile  README.md
service-gateway/proto/: auth.proto
service-gateway/src/: auth_handler.rs  config.rs  lib.rs  main.rs
service-images/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
service-images/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
service-images/src/api/: mod.rs  router.rs  schemas.rs
service-images/tests/: api_tests.rs
service-proxy/: Cargo.toml
service-proxy/src/: lib.rs  main.rs
service/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
service/src/api/: mod.rs
service/src/api/chats/: mod.rs  router.rs  schemas.rs
service/src/api/images/: router.rs
service/tests/: integration_test.rs
stream-service/: Cargo.toml
stream-service/src/: lib.rs  main.rs
stream-service/src/api/: mod.rs
stream-service/src/middleware/: logger.rs
valkey-client/: Cargo.toml
valkey-client/src/: error.rs  lib.rs
valkey-client/tests/: valkey_integration.rs
