[workspace]
resolver = "3"
members = ["s3", "chat-service"]
default-members = ["chat-service"]

[workspace.package]
edition = "2024"
readme = "README.md"
license = "MIT"

[workspace.dependencies]
# HTTP stack
axum = {version = "0.8.4", features = ["multipart", "macros"]}
tower-http = { version = "0.6.2", features = ["cors", "trace", "timeout"] }

# Async runtime
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "signal"] }

# Observability
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# JSON serialization
serde_json = "1.0.142"

# UUID
uuid = {version = "1.18.0", features = ["v7"]}

# Errors
thiserror = "2.0.12"

# Env varible
dotenvy = "0.15.7"

# custom crates
s3 = {path = "s3" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = 'abort'
debug = false
strip = true


