[package]
name = "stream-service"
version = "0.1.0"
license = "MIT"
edition.workspace = true

[dependencies]
axum.workspace = true
tower-http.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
s3.workspace = true
dotenvy.workspace = true
uuid.workspace = true
