[package]
name = "kafka-client"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
rdkafka = {version = "0.39", features = ["cmake-build"]}
futures = "0.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
testcontainers-modules.workspace = true
anyhow.workspace = true
