[package]
name = "s3"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
aws-sdk-s3 = "1.96.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.3", features = ["hardcoded-credentials"] }

tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
axum.workspace = true
serde_json.workspace = true
