[package]
name = "scylladb"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
scylla = { version = "1.4.1", features = ["chrono-04", "metrics"] }
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

