[package]
name = "seed-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sqlx.workspace = true
scylladb-client.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true

argon2 = "0.5"
clap = { version = "4", features = ["derive", "env"] }
fake = { version = "4", features = ["uuid", "chrono"] }
rand = "0.9"
futures-util.workspace = true
