[package]
name = "service-auth"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
tokio-util = "0.7"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
urlencoding = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls"] }

tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
mimalloc.workspace = true
serde.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
