[package]
name = "service-calls"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
axum-prometheus.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dotenvy.workspace = true
mimalloc.workspace = true
dashmap.workspace = true
futures-util.workspace = true
