[package]
name = "service-channels"
version = "0.1.0"
edition.workspace = true

[dependencies]
meilisearch-sdk = "0.32"

axum.workspace = true
axum-prometheus.workspace = true
tower-http.workspace = true
tokio.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
mimalloc.workspace = true
valkey-client.workspace = true
