[package]
name = "service-chats"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
dashmap = "6"
futures-util = "0.3"

axum.workspace = true
axum-prometheus.workspace = true
tokio.workspace = true
tower-http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
mimalloc.workspace = true
scylladb-client.workspace = true
