[package]
name = "service-gateway"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
pingora = { version = "0.8", features = ["proxy"] }
pingora-limits = "0.8"
bytes = "1.11"
async-trait = "0.1"

tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
uuid.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
