[package]
name = "service"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
s3.workspace = true
kafka.workspace = true
chrono.workspace = true
futures-util = "0.3.31"
http-body-util = "0.1.3"
