[package]
name = "service"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
axum-prometheus = "0.9.0"
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
mimalloc.workspace = true

futures-util = "0.3.31"
dashmap = "6.1.0"

s3.workspace = true
kafka.workspace = true
scylladb.workspace = true


[dev-dependencies]
axum-test = "18.4.1"
