[package]
name = "service"
version = "0.1.0"
license = "MIT"
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
s3.workspace = true
kafka.workspace = true
