[package]
name = "valkey-client"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
redis = { version = "1.2", features = ["aio", "tokio-comp", "connection-manager"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
testcontainers-modules.workspace = true
anyhow.workspace = true
